--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-leaflet": "^5.0.0",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.1.5",
-    "react-toastify": "^11.0.3"
+    "react-toastify": "^11.0.3",
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
