--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-leaflet": "^5.0.0",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.1.5",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
     "styled-components": "^6.1.15"
   },
