--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@react-google-maps/api": "^2.20.6",
     "animate.css": "^4.1.1",
     "axios": "^1.7.9",
